6-k8s-ingress/manifests/user-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-db
  namespace: demo-k8s
  labels:
    app: user-db
spec:
  selector:
    matchLabels:
      app: user-db
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 2
      maxSurge: 2
  template:
    metadata:
      labels:
        app: user-db
    spec:
      containers:
        - name: user-mongo-container
          image: mongo:latest
          ports:
            - containerPort: 27017
              name: user-db
          livenessProbe:
            httpGet:
              path: /
              port: 27017
            initialDelaySeconds: 150
            periodSeconds: 10
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 27017
            initialDelaySeconds: 150
            periodSeconds: 10
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
