6-k8s-ingress/manifests/post-srv-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: post-srv-service
  namespace: demo-k8s
  labels:
    app: post-srv
spec:
  selector:
    app: post-srv
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
