6-k8s-ingress/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  namespace: demo-k8s
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: prefix.user-service
      http:
        paths:
          - pathType: Prefix
            path: /suffix(/|$)(.*)
            backend:
              service:
                name: user-srv-service
                port:
                  number: 8080
    - host: prefix.post-service
      http:
        paths:
          - pathType: Prefix
            path: /suffix(/|$)(.*)
            backend:
              service:
                name: post-srv-service
                port:
                  number: 8080
